--- a/src/main/webapp/touristsPage.html
+++ b/src/main/webapp/touristsPage.html
@@ -196,7 +196,7 @@
         self.notes = ko.observable();
         self.dateOfBirth = ko.observable();
 
-        self.addTourist = function () {
+        self.addFlight = function () {
             $('#add').modal('hide');
             touristsViewModel.add({
                 name: self.name(),
