reservation controller added

--- a/src/main/webapp/flightsPage.html
+++ b/src/main/webapp/flightsPage.html
@@ -113,7 +113,7 @@
 <script type="text/javascript">
     function FlightsViewModel() {
         var self = this;
-        self.flightsURI = 'http://localhost:8080/flights/';
+        self.flightsURI = 'http://localhost:8080/flights';
 
         self.flights = ko.observableArray();
 
