--- a/src/main/webapp/flightsPage.html
+++ b/src/main/webapp/flightsPage.html
@@ -176,13 +176,13 @@
             self.ajax(self.flightsURI, 'POST', flightToSend).done(function (data) {
                 console.log(data);
                 self.flights.push({
-                    id: ko.observable(data.id),
+                    id: ko.observable(data._links.self.href.split("/").pop()),
                     departureDate: ko.observable(data.departureDateTime.split("T")[0]),
                     departureTime: ko.observable(data.departureDateTime.split("T")[1]),
                     arrivalDate: ko.observable(data.arrivalDateTime.split("T")[0]),
                     arrivalTime: ko.observable(data.arrivalDateTime.split("T")[1]),
                     numberOfSeats: ko.observable(data.numberOfSeats),
-                    ticketPrice: new Date(ko.observable(data.ticketPrice))
+                    ticketPrice: ko.observable(data.ticketPrice)
                 });
             });
         }
